feat: complete markup

--- a/src/styles/blocks/article-contact.scss
+++ b/src/styles/blocks/article-contact.scss
@@ -27,6 +27,25 @@
         box-shadow: 0 0 rem(50) rem(-1) rgba(96, 107, 143, 0.16);
     }
 
+    &--line-tab {
+        @include r(1000) {
+            display: flex;
+        }
+
+        @include r(700) {
+            display: block;
+        }
+
+        .article-contact {
+            &__header {
+                flex: 1 0;
+            }
+
+            &__main {
+                flex: 1 0;
+            }
+        }
+    }
     &__title {
         line-height: 1.3;
         font-weight: 700;
@@ -35,6 +54,18 @@
 
         @include r(1000) {
             margin-bottom: rem(8);
+        }
+
+        &--large {
+            line-height: 1.2;
+            font-weight: 800;
+            font-size: rem(32);
+            margin-bottom: rem(12);
+
+            @include r(700) {
+                font-size: rem(24);
+                margin-bottom: rem(12);
+            }
         }
     }
 
