--- a/src/styles/blocks/table.scss
+++ b/src/styles/blocks/table.scss
@@ -223,6 +223,7 @@
         align-items: center;
         min-height: rem(40);
         transition: 0.3s all;
+        text-decoration: none;
         justify-content: center;
         background-color: $blue-resolution;
 
