--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -1152,6 +1152,14 @@ button {
   overflow-x: visible;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.mb-12 {
+  margin-bottom: 0.75rem;
+}
+
 @media only screen and (max-width: 1000px) {
   .mbl-0 {
     margin-bottom: 0;
@@ -2762,6 +2770,31 @@ button {
   -webkit-box-shadow: 0 0 3.125rem -0.0625rem rgba(96, 107, 143, 0.16);
           box-shadow: 0 0 3.125rem -0.0625rem rgba(96, 107, 143, 0.16);
 }
+@media only screen and (max-width: 1000px) {
+  .article-contact--line-tab {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .article-contact--line-tab {
+    display: block;
+  }
+}
+.article-contact--line-tab .article-contact__header {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0;
+      -ms-flex: 1 0;
+          flex: 1 0;
+}
+.article-contact--line-tab .article-contact__main {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0;
+      -ms-flex: 1 0;
+          flex: 1 0;
+}
 .article-contact__title {
   line-height: 1.3;
   font-weight: 700;
@@ -2771,6 +2804,18 @@ button {
 @media only screen and (max-width: 1000px) {
   .article-contact__title {
     margin-bottom: 0.5rem;
+  }
+}
+.article-contact__title--large {
+  line-height: 1.2;
+  font-weight: 800;
+  font-size: 2rem;
+  margin-bottom: 0.75rem;
+}
+@media only screen and (max-width: 700px) {
+  .article-contact__title--large {
+    font-size: 1.5rem;
+    margin-bottom: 0.75rem;
   }
 }
 .article-contact__name {
@@ -3601,6 +3646,22 @@ button {
   fill: #32407B;
 }
 
+.fancybox__content .article-review {
+  min-height: 0;
+}
+.fancybox__content .article-review__organization {
+  padding-right: 1.625rem;
+}
+.fancybox__content .article-review__main .editor {
+  display: block;
+  -webkit-line-clamp: inherit;
+  -webkit-box-orient: inherit;
+}
+.fancybox__content .article-review__footer {
+  display: none;
+  visibility: hidden;
+}
+
 .article-search {
   display: block;
   text-decoration: none;
@@ -4320,6 +4381,18 @@ button {
   transition: 0.3s all;
   background-color: rgba(255, 255, 255, 0);
 }
+@media only screen and (max-width: 700px) {
+  .section--header .button-menu.invert .button-menu__line {
+    background-color: #FFFFFF;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .section--header.fixed .button-menu.invert .button-menu__line {
+    background-color: #273366;
+  }
+}
+
 .body--menu .button-menu {
   z-index: 3;
 }
@@ -5850,6 +5923,62 @@ a.footer-info__link:hover {
   background-color: #E6E6F5;
 }
 
+.info {
+  height: 26rem;
+  position: relative;
+}
+@media only screen and (max-width: 1000px) {
+  .info {
+    height: auto;
+    padding-bottom: 21.5625rem;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .info {
+    padding-bottom: 19.6875rem;
+  }
+}
+.info__content {
+  z-index: 1;
+  top: 2.25rem;
+  width: 30rem;
+  position: relative;
+  border-radius: 0.125rem;
+  background-color: #FFFFFF;
+  padding: 1.5rem 2rem;
+  -webkit-box-shadow: 0 0 3.125rem -1px rgba(96, 107, 143, 0.16);
+          box-shadow: 0 0 3.125rem -1px rgba(96, 107, 143, 0.16);
+}
+@media only screen and (max-width: 1000px) {
+  .info__content {
+    top: 0;
+    width: 100%;
+  }
+}
+.info__map {
+  top: 0;
+  left: 26.25rem;
+  height: 35.375rem;
+  position: absolute;
+  width: calc(100vw - (100vw - 76.25rem) / 2 - 26.25rem);
+}
+@media only screen and (max-width: 1000px) {
+  .info__map {
+    bottom: 0;
+    height: auto;
+    top: 6.0625rem;
+    left: -3.125rem;
+    right: -3.125rem;
+    width: calc(100% + 6.25rem);
+  }
+}
+@media only screen and (max-width: 700px) {
+  .info__map {
+    left: -1.25rem;
+    right: -1.25rem;
+  }
+}
+
 .input-file {
   gap: 0.625rem;
   display: -webkit-box;
@@ -5977,17 +6106,30 @@ a.footer-info__link:hover {
           align-items: center;
 }
 a.link-contact {
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
   text-decoration: none;
-  -webkit-transition: 0.3s opacity;
-  transition: 0.3s opacity;
 }
 
 button.link-contact {
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
   text-decoration: none;
-  -webkit-transition: 0.3s opacity;
-  transition: 0.3s opacity;
 }
 
+.link-contact--intro {
+  gap: 0.75rem;
+}
+.link-contact--intro:hover {
+  opacity: 0.5;
+}
+@media only screen and (max-width: 700px) {
+  .link-contact--intro {
+    font-weight: 500;
+    font-size: 1rem;
+    color: #273366;
+  }
+}
 .link-contact--medium {
   font-weight: 500;
   font-size: 1rem;
@@ -5998,7 +6140,7 @@ a.link-contact--medium {
   transition: 0.3s opacity;
 }
 a.link-contact--medium:hover {
-  opacity: 0.7;
+  color: #4E5677;
 }
 
 button.link-contact--medium {
@@ -6007,7 +6149,7 @@ button.link-contact--medium {
   transition: 0.3s opacity;
 }
 button.link-contact--medium:hover {
-  opacity: 0.7;
+  color: #4E5677;
 }
 
 @media only screen and (max-width: 1300px) {
@@ -6305,6 +6447,16 @@ button.link-contact--menu:hover {
   height: 3rem;
   fill: #5F6A99;
 }
+.link-social--intro:hover {
+  opacity: 0.5;
+}
+.link-social--intro .link-social__icon {
+  fill: none;
+  width: 2.625rem;
+  height: 2.625rem;
+  stroke-width: 1px;
+  stroke: #848CAA;
+}
 .link-social--mobile .link-social__icon {
   width: 2.5rem;
   height: 2.5rem;
@@ -6415,7 +6567,7 @@ a.logo:hover {
   -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 }
 .main--visible {
@@ -6963,6 +7115,19 @@ a.logo:hover {
     opacity: 1;
   }
 }
+.modal {
+  width: 100%;
+  background-color: #FEFEFE;
+}
+.modal--small {
+  padding: 2rem;
+  max-width: 25rem;
+}
+.modal--regular {
+  padding: 1.5rem 2rem;
+  max-width: 30rem;
+}
+
 .nav {
   gap: 1.5rem;
   display: -webkit-box;
@@ -7772,6 +7937,9 @@ button.nav__link {
           break-inside: avoid-column;
 }
 
+.slider__container {
+  width: 100%;
+}
 .slider__container--overflow {
   overflow: hidden;
 }
@@ -8167,6 +8335,7 @@ button.nav__link {
   min-height: 2.5rem;
   -webkit-transition: 0.3s all;
   transition: 0.3s all;
+  text-decoration: none;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
@@ -8333,13 +8502,82 @@ strong.text-table {
   }
 }
 
-#fancybox-modal-gallery {
+#fancybox-modal-photo {
   --fancybox-bg: rgba(78, 86, 119, 0.7);
 }
 @media only screen and (max-width: 700px) {
-  #fancybox-modal-gallery {
+  #fancybox-modal-photo {
     --fancybox-bg: rgba(78, 86, 119, 0.95);
   }
+}
+
+#fancybox-modal-review {
+  --fancybox-bg: rgba(78, 86, 119, 0.7);
+}
+#fancybox-modal-review .fancybox__slide {
+  padding: 0;
+}
+#fancybox-modal-review .fancybox__content {
+  padding: 0;
+  max-width: 30rem;
+}
+#fancybox-modal-review .f-button.is-close-btn {
+  top: 1.5rem;
+  right: 2rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  background: none;
+}
+#fancybox-modal-review .f-button.is-close-btn svg {
+  width: 0.875rem;
+  height: 0.875rem;
+  stroke: #273366;
+}
+
+#fancybox-modal-offer {
+  --fancybox-bg: rgba(78, 86, 119, 0.7);
+}
+#fancybox-modal-offer .fancybox__slide {
+  padding: 0;
+}
+#fancybox-modal-offer .fancybox__content {
+  padding: 0;
+  max-width: 30rem;
+}
+#fancybox-modal-offer .f-button.is-close-btn {
+  top: 1.5rem;
+  right: 2rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  background: none;
+}
+#fancybox-modal-offer .f-button.is-close-btn svg {
+  width: 0.875rem;
+  height: 0.875rem;
+  stroke: #273366;
+}
+
+#fancybox-modal-project {
+  --fancybox-bg: rgba(78, 86, 119, 0.7);
+}
+#fancybox-modal-project .fancybox__slide {
+  padding: 0;
+}
+#fancybox-modal-project .fancybox__content {
+  padding: 0;
+  max-width: 30rem;
+}
+#fancybox-modal-project .f-button.is-close-btn {
+  top: 1.5rem;
+  right: 2rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  background: none;
+}
+#fancybox-modal-project .f-button.is-close-btn svg {
+  width: 0.875rem;
+  height: 0.875rem;
+  stroke: #273366;
 }
 
 .relative {
