--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -40,6 +40,7 @@
 @import "form";
 @import "form-search";
 @import "hr";
+@import "info";
 @import "input";
 @import "input-file";
 @import "layout";
@@ -59,6 +60,7 @@
 @import "menu";
 @import "menu-footer";
 @import "menu-mobile";
+@import "modal";
 @import "nav";
 @import "nav-slider";
 @import "pagination";
