feat: add fake api

--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -22,6 +22,7 @@
 @import "button-head";
 @import "button-menu";
 @import "button-nav";
+@import "button-section";
 @import "body";
 @import "breadcrumbs";
 @import "button";
@@ -34,8 +35,10 @@
 @import "date";
 @import "decor";
 @import "dropdown";
+@import "dropdown-form";
 @import "editor";
 @import "field";
+@import "fieldset";
 @import "footer-info";
 @import "form";
 @import "form-search";
@@ -60,6 +63,7 @@
 @import "menu";
 @import "menu-footer";
 @import "menu-mobile";
+@import "message";
 @import "modal";
 @import "nav";
 @import "nav-slider";
