--- a/src/styles/blocks/agreement.scss
+++ b/src/styles/blocks/agreement.scss
@@ -63,6 +63,14 @@
             }
         }
     }
+
+    &.error {
+        .agreement {
+            &__box {
+                border-color: $error;
+            }
+        }
+    }
 }
 
 .cover {
