--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -1080,6 +1080,10 @@ table {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+*[hidden] {
+  display: none !important;
+  visibility: hidden !important;
+}
 
 html {
   scroll-behavior: smooth;
@@ -2717,6 +2721,9 @@ button {
 }
 .agreement__text a:hover {
   text-decoration: none;
+}
+.agreement.error .agreement__box {
+  border-color: #F05A63;
 }
 
 .cover .agreement {
@@ -4591,6 +4598,45 @@ button {
   fill: #FFFFFF;
 }
 
+.button-section {
+  width: 100%;
+  border: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  background: none;
+  padding: 0.375rem 0;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.button-section__text {
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 1rem;
+  font-family: inherit;
+  color: #273366;
+}
+.button-section__icon {
+  height: 0.5rem;
+  width: 0.875rem;
+  display: block;
+  fill: #848CAA;
+  -webkit-transition: 0.3s -webkit-transform;
+  transition: 0.3s -webkit-transform;
+  transition: 0.3s transform;
+  transition: 0.3s transform, 0.3s -webkit-transform;
+}
+
 .body {
   display: -webkit-box;
   display: -webkit-flex;
@@ -4657,12 +4703,12 @@ button {
 }
 .button--clear {
   background: none;
+  color: #5F6A99;
   font-size: 1rem;
   border: 1px solid #5F6A99;
 }
 .button--clear:hover {
-  color: #273366;
-  background-color: #FFFFFF;
+  opacity: 0.5;
 }
 .button.menu-fix {
   margin: 1rem 0;
@@ -4947,6 +4993,9 @@ button {
   -webkit-align-items: flex-end;
       -ms-flex-align: end;
           align-items: flex-end;
+}
+.columns--form-modal {
+  gap: 0.5rem;
 }
 .columns__col {
   position: relative;
@@ -5487,6 +5536,18 @@ button {
   }
 }
 
+.dropdown-form__main {
+  max-height: 0;
+  overflow: hidden;
+}
+.dropdown-form__content {
+  padding: 0.625rem 0;
+}
+
+.form__section.active .dropdown-form__main {
+  max-height: 1000vh;
+}
+
 .editor {
   width: 100%;
   display: block;
@@ -5624,15 +5685,16 @@ button {
 }
 .field__input {
   width: 100%;
-  border: none;
   display: block;
   height: 2.375rem;
   font-weight: 400;
   font-size: 0.75rem;
   padding: 0 0.75rem;
   font-family: inherit;
+  border-radius: 0.125rem;
   color: #848CAA;
   background-color: #F1F1FA;
+  border: 1px solid transparent;
 }
 @media only screen and (max-width: 700px) {
   .field__input {
@@ -5654,9 +5716,27 @@ button {
 .field__input::placeholder {
   color: #848CAA;
 }
+.field__select {
+  width: 100%;
+  display: block;
+  cursor: pointer;
+  height: 2.375rem;
+  font-weight: 400;
+  font-size: 0.75rem;
+  padding: 0 0.75rem;
+  font-family: inherit;
+  border-radius: 0.125rem;
+  color: #848CAA;
+  background-color: #F1F1FA;
+  border: 1px solid transparent;
+}
+@media only screen and (max-width: 700px) {
+  .field__select {
+    height: 2.875rem;
+  }
+}
 .field__textarea {
   width: 100%;
-  border: none;
   resize: none;
   display: block;
   padding: 0.75rem;
@@ -5664,7 +5744,9 @@ button {
   font-size: 0.75rem;
   min-height: 5.625rem;
   font-family: inherit;
+  border-radius: 0.125rem;
   background-color: #F1F1FA;
+  border: 1px solid transparent;
 }
 .field__textarea::-webkit-input-placeholder {
   color: #848CAA;
@@ -5680,6 +5762,12 @@ button {
 }
 .field__textarea::placeholder {
   color: #848CAA;
+}
+.field.error .field__input {
+  border-color: #F05A63;
+}
+.field.error .field__textarea {
+  border-color: #F05A63;
 }
 
 .mod-textarea .field {
@@ -5715,6 +5803,20 @@ button {
     color: #848CAA;
     background-color: #F1F1FA;
   }
+}
+
+.fieldset {
+  display: block;
+}
+.fieldset__title {
+  display: block;
+  font-weight: 400;
+  font-size: 0.875rem;
+  margin-bottom: 1rem;
+  color: #848CAA;
+}
+.fieldset__title strong {
+  color: #F05A63;
 }
 
 .footer-info {
@@ -5819,6 +5921,30 @@ a.footer-info__link {
 }
 a.footer-info__link:hover {
   opacity: 0.7;
+}
+
+.form__section {
+  padding: 0.75rem 0;
+}
+.form__footer {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  gap: 0.625rem;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #FEFEFE;
+  padding: 0.625rem 1.5rem 0.75rem;
+  -webkit-box-shadow: 0 -0.1875rem 0.25rem -0.1875rem rgba(0, 0, 0, 0.1), 0 0.25rem 2rem -0.125rem rgba(0, 0, 0, 0.08);
+          box-shadow: 0 -0.1875rem 0.25rem -0.1875rem rgba(0, 0, 0, 0.1), 0 0.25rem 2rem -0.125rem rgba(0, 0, 0, 0.08);
 }
 
 .form-search {
@@ -7117,6 +7243,7 @@ a.logo:hover {
 }
 .modal {
   width: 100%;
+  position: relative;
   background-color: #FEFEFE;
 }
 .modal--small {
@@ -8402,6 +8529,10 @@ strong.text-table {
   .title {
     font-size: 1.5rem;
   }
+}
+.title--middle {
+  line-height: 1.3;
+  font-size: 1.5rem;
 }
 .title--small {
   line-height: 1.4;
