--- a/src/styles/base/general.scss
+++ b/src/styles/base/general.scss
@@ -1,5 +1,10 @@
 * {
     box-sizing: border-box;
+
+    &[hidden] {
+        display: none !important;
+        visibility: hidden !important;
+    }
 }
 
 html {
