--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -7,6 +7,11 @@
         font-size: rem(24);
     }
 
+    &--middle {
+        line-height: 1.3;
+        font-size: rem(24);
+    }
+
     &--small {
         line-height: 1.4;
         font-size: rem(20);
